8334692: [lworld] add missing compiler warnings